fixed button height bug + z-index

--- a/src/defaultStyle.css
+++ b/src/defaultStyle.css
@@ -23,7 +23,7 @@ mr-panel {
     border-radius: 2%;
 }
 
-mr-div, mr-button, mr-img, mr-a {
+mr-div, mr-button, mr-img, mr-a, mr-text{
     display: inline-block;
     position: relative;
     z-index: inherit;
@@ -37,9 +37,10 @@ mr-img {
 
 mr-button {
     padding: 5px;
+    text-align: center;
+    vertical-align: middle;
     background-color: #8a8a8a;
     border-radius: 0.5%;
-    z-index: 1; /* end */
     /* animation: back 0.25s ease-out forwards; */
 }
 
